budgetmf/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-front-deployment
  labels:
    app: budget-front
    type: front
spec:
  selector:
    matchLabels:
      app: budget-front
      type: front
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: budget-front    
        type: front
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker2erpnode
      imagePullSecrets:
       - name: regcred
      containers:
        - name: budget-front
          image: 192.168.2.225:5000/frontbudget:2
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "1024Mi"
              cpu: "300m"
            limits:
              memory: "3Gi"
              cpu: "2"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
