budgetmf/virtualServiceBUDGET.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-budget
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: /v1/api/canva 
    - uri:
        prefix: /v1/api/reamenagement- 
    - uri:
        prefix: /v1/api/execution-
    - uri:
        prefix: /v1/api/editions 
    - uri:
        prefix: /v1/api/reports 
    - uri:
        prefix: /v1/api/budget- 
    - uri:
        prefix: /v1/api/chapitre- 
    - uri:
        prefix: /v1/api/nature-
    - uri:
        prefix: /v1/api/plan- 
    - uri:
        prefix: /v1/api/post- 
    route:
    - destination:
        host: service-budget.default.svc.cluster.local
        port:
          number: 9097
